# double-rust-ledger

./: .env  .gitignore  Cargo.toml  README.md  ledger.db
migrations/2023-01-01-000001_create_accounts/: down.sql  up.sql
migrations/2023-01-01-000002_create_transactions/: down.sql  up.sql
migrations/2023-01-01-000003_create_entries/: down.sql  up.sql
src/: config.rs  database.rs  errors.rs  lib.rs  main.rs  middleware.rs  models.rs  schema.rs
src/handlers/: accounts.rs  balance.rs  health.rs  mod.rs  transactions.rs
tests/: simple_integration_tests.rs
