[package]
name = "double-rust-ledger"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
actix-web = "4.4"
actix-cors = "0.7"

# Database - Diesel ORM
diesel = { version = "2.1", features = ["sqlite", "chrono", "uuid", "r2d2"] }
diesel_migrations = "2.1"
r2d2 = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal", "time"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Decimal for precise calculations
rust_decimal = { version = "1.32", features = ["serde-with-str"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment
dotenvy = "0.15"

# Logging
env_logger = "0.10"
log = "0.4"

# Validation
validator = { version = "0.16", features = ["derive"] }

# Async utilities
futures-util = "0.3"

[dev-dependencies]
# Testing
actix-rt = "2.9"
serde_json = "1.0"